force-app/main/default/objects/FNS_Fee__c/FNS_Fee__c.object-meta.xml
<CustomObject>
    <label>Fee</label>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>