force-app/main/default/objects/FNS_Fee__c/fields/FNS_Amount__c.field-meta.xml
<CustomField>
    <fullName>FNS_Amount__c</fullName>
    <description>Fee Amount</description>
    <label>Fee Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>