force-app/main/default/objects/FNS_Fee__c/fields/FNS_CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>FNS_CurrencyCode__c</fullName>
    <description>Currency Code</description>
    <label>Currency Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>