force-app/main/default/objects/FNS_Fee__c/fields/FNS_FeeRate__c.field-meta.xml
<CustomField>
    <fullName>FNS_FeeRate__c</fullName>
    <description>Accrual Rate</description>
    <label>Fee Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>