force-app/main/default/objects/FNS_Fee__c/fields/FNS_FeeType__c.field-meta.xml
<CustomField>
    <fullName>FNS_FeeType__c</fullName>
    <label>Fee Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_FeeType</valueSetName>
    </valueSet>
</CustomField>