force-app/main/default/objects/FNS_Fee__c/fields/FNS_FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>FNS_FinancialAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Facility</description>
    <label>Financial Product</label>
    <referenceTo>FNS_FinancialAccount__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>FinancialProductFees</relationshipName>
    <type>Lookup</type>
</CustomField>