force-app/main/default/objects/FNS_Fee__c/fields/FNS_FinancialAccountTransaction__c.field-meta.xml
<CustomField>
    <fullName>FNS_FinancialAccountTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan</description>
    <label>Loan</label>
    <referenceTo>FNS_FinancialAccountTransaction__c</referenceTo>
    <relationshipLabel>Loan Fees</relationshipLabel>
    <relationshipName>LoanFees</relationshipName>
    <type>Lookup</type>
</CustomField>