force-app/main/default/objects/FNS_Fee__c/recordTypes/FNS_Fee.recordType-meta.xml
<RecordType>
    <fullName>FNS_Fee</fullName>
    <active>true</active>
    <label>Fee</label>
</RecordType>