force-app/main/default/objects/FNS_Fee__c/recordTypes/FNS_FeeReadOnly.recordType-meta.xml
<RecordType>
    <fullName>FNS_FeeReadOnly</fullName>
    <active>true</active>
    <label>Fee Read Only</label>
</RecordType>