force-app/main/default/objects/FNS_Fee__c/listViews/FNS_Fee.listView-meta.xml
<ListView>
    <fullName>FNS_Fee</fullName>
    <columns>NAME</columns>
    <columns>FNS_FeeType__c</columns>
    <columns>FNS_FinancialAccount__c</columns>
    <columns>FNS_FinancialAccountTransaction__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Fees</label>
</ListView>